<resources>
    <string name="app_name">SplitApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="please_login_in">Please Login In.</string>
    <string name="username">Username</string>
    <string name="new_user_sign_up">New User? Sign Up.</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_signed_in">Already Signed In. Login.</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="logout">Logout</string>
    <string name="feed">Feed</string>
    <string name="email">Email</string>
    <string name="user_s_profile_picture">User\'s Profile Picture</string>
    <string name="defaultPfp"><![CDATA[https://firebasestorage.googleapis.com/v0/b/splitapp-8aa7f.appspot.com/o/UserProfiles%2Fdefault%2Fpfp%20hehe.jpg?alt=media&token=0e27dc9d-546f-4c73-ab9d-e359e5954952]]></string>
    <string-array name="filterTypes">
        <item>Popular</item>
        <item>New</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>